--- a/RootModule/build.gradle
+++ b/RootModule/build.gradle
@@ -50,7 +50,7 @@ subprojects {
     }
 
     dependencies {
-        developmentOnly('org.springframework.boot:spring-boot-devtools')
+        developmentOnly 'org.springframework.boot:spring-boot-devtools'
         implementation 'org.projectlombok:lombok:1.18.20'
     }
 }
@@ -70,8 +70,8 @@ project(':Domain') {
 project(':Client') {
     dependencies {
         implementation project(':Common')
-        implementation('org.springframework.boot:spring-boot-starter-web')
-        implementation('org.springframework.kafka:spring-kafka')
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.kafka:spring-kafka'
     }
 }
 
@@ -80,15 +80,15 @@ project(':App') {
         implementation project(':Common')
         implementation project(':Client')
         implementation project(':Domain')
-        implementation('org.springframework.boot:spring-boot-starter-web')
+        implementation 'org.springframework.boot:spring-boot-starter-web'
         //kafka
-        implementation('org.springframework.kafka:spring-kafka')
+        implementation 'org.springframework.kafka:spring-kafka'
 
-        implementation('org.springframework.boot:spring-boot-starter-webflux')
+        implementation 'org.springframework.boot:spring-boot-starter-webflux'
         //Spock
-        testImplementation('org.spockframework:spock-core:2.0-groovy-3.0') {
-            exclude module : 'groovy-all'}
-        testImplementation('org.spockframework:spock-spring:2.0-groovy-3.0')
-        testImplementation('org.springframework.boot:spring-boot-starter-test')
+        testImplementation 'org.spockframework:spock-core:1.2-groovy-2.4'
+        testImplementation 'org.spockframework:spock-spring:1.2-groovy-2.4'
+
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 }
