성공 응답 통일, devtools 활성화

--- a/RootModule/build.gradle
+++ b/RootModule/build.gradle
@@ -51,7 +51,6 @@ subprojects {
 
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-web'
-        developmentOnly 'org.springframework.boot:spring-boot-devtools'
         implementation 'org.projectlombok:lombok:1.18.20'
     }
 }
@@ -80,6 +79,9 @@ project(':App') {
         implementation project(':Common')
         implementation project(':Client')
         implementation project(':Domain')
+
+        //devtools
+        developmentOnly 'org.springframework.boot:spring-boot-devtools'
         //kafka
         implementation 'org.springframework.kafka:spring-kafka'
 
