--- a/RootModule/build.gradle
+++ b/RootModule/build.gradle
@@ -92,6 +92,7 @@ project(':App') {
         //test
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testImplementation 'org.springframework.kafka:spring-kafka-test:2.7.3'
+        testImplementation group: 'org.springframework', name: 'spring-test', version: '5.3.7'
 
     }
 }
