--- a/RootModule/build.gradle
+++ b/RootModule/build.gradle
@@ -65,6 +65,7 @@ project(':Common') {
 project(':Domain') {
     dependencies {
         implementation project(':Common')
+        implementation 'javax.validation:validation-api:2.0.1.Final'
     }
 }
 
@@ -72,6 +73,8 @@ project(':Client') {
     dependencies {
         implementation project(':Common')
         implementation 'org.springframework.kafka:spring-kafka'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'
+        testImplementation 'com.h2database:h2:1.4.200'
     }
 }
 
@@ -89,7 +92,7 @@ project(':App') {
 
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-        implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+
 
         //test
         testImplementation ('org.springframework.boot:spring-boot-starter-test:2.5.2')
