--- a/RootModule/build.gradle
+++ b/RootModule/build.gradle
@@ -66,7 +66,6 @@ project(':Domain') {
     dependencies {
         implementation project(':Common')
         implementation 'javax.validation:validation-api:2.0.1.Final'
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'
         testImplementation 'com.h2database:h2:1.4.200'
     }
 }
@@ -92,8 +91,10 @@ project(':App') {
         implementation 'org.springframework.kafka:spring-kafka'
 
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
-
-
+        implementation 'javax.validation:validation-api:2.0.1.Final'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'
+        //객체 바인드
+        implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
 
         //test
         testImplementation ('org.springframework.boot:spring-boot-starter-test:2.5.2')
