--- a/RootModule/build.gradle
+++ b/RootModule/build.gradle
@@ -53,11 +53,13 @@ subprojects {
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.projectlombok:lombok:1.18.20'
+        implementation 'javax.validation:validation-api:2.0.1.Final'
     }
 }
 
 project(':Common') {
     dependencies {
+
 
     }
 }
@@ -65,7 +67,7 @@ project(':Common') {
 project(':Domain') {
     dependencies {
         implementation project(':Common')
-        implementation 'javax.validation:validation-api:2.0.1.Final'
+
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'
         //json 변환라이브러리
         implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
@@ -99,6 +101,7 @@ project(':App') {
 
 
         //test
-        testImplementation ('org.springframework.boot:spring-boot-starter-test:2.5.2')
+        testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.2'
+        testImplementation 'com.h2database:h2:1.4.200'
     }
 }
