--- a/RootModule/App/src/main/resources/application.properties
+++ b/RootModule/App/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
+
+#DB
+spring.datasource.url=jdbc:h2:~/test;
+#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa 
+spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
