--- a/RootModule/build.gradle
+++ b/RootModule/build.gradle
@@ -71,7 +71,7 @@ project(':Domain') {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'
         //json 변환라이브러리
         implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
-        testImplementation 'com.h2database:h2:1.4.200'
+        implementation 'com.h2database:h2:1.4.200'
     }
 }
 
@@ -101,7 +101,7 @@ project(':App') {
 
 
         //test
-        testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.2'
-        testImplementation 'com.h2database:h2:1.4.200'
+        implementation 'org.springframework.boot:spring-boot-starter-test:2.5.2'
+        implementation 'com.h2database:h2:1.4.200'
     }
 }
